--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-VITE_env = {
-    targetChainId: "0x1",
-    targetChainName: "homestead",
-  }
+VITE_ETHERS_ChainName = "homestead"
+VITE_ETHERS_ChainId = '0x1'
+VITE_CROSSMINT_Id = 'e3269178-b657-46f8-a517-5f38fb613c75'
