launchpad image fix

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@fontsource/space-grotesk": "^4.5.10",
+    "@mailchimp/mailchimp_marketing": "^3.0.78",
     "@popmotion/popcorn": "^0.4.4",
+    "axios": "^0.27.2",
     "ethers": "^5.7.1",
     "formik": "^2.2.9",
     "framer-motion": "^7.3.5",
