--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "popmotion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.0",
     "react-swipeable": "^7.0.0"
