--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.10.4",
     "@fontsource/space-grotesk": "^4.5.10",
     "@mailchimp/mailchimp_marketing": "^3.0.78",
+    "@metamask/detect-provider": "^2.0.0",
     "@popmotion/popcorn": "^0.4.4",
     "axios": "^0.27.2",
     "ethers": "^5.7.1",
@@ -24,6 +25,7 @@
     "popmotion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.0",
