mint scroll & end date

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_ETHERS_ChainName = "homestead"
 VITE_ETHERS_ChainId = '0x1'
 VITE_CROSSMINT_Id = 'e3269178-b657-46f8-a517-5f38fb613c75'
+VITE_FORM_URL = 'https://script.google.com/macros/s/AKfycby-pL9CFY2eJ08DzW6RzyFh_gD-La5AVVeSUYfnPL6MysYn1I7werSMQQB05AYUIzzEJQ/exec'
