--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource/space-grotesk": "^4.5.10",
     "@mailchimp/mailchimp_marketing": "^3.0.78",
     "@metamask/detect-provider": "^2.0.0",
+    "@mui/joy": "^5.0.0-alpha.49",
     "@popmotion/popcorn": "^0.4.4",
     "axios": "^0.27.2",
     "ethers": "^5.7.1",
